--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@react-native-async-storage/async-storage": "^1.15.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-google-signin/google-signin": "^6.0.0",
+    "@react-navigation/bottom-tabs": "^5.11.9",
+    "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
     "expo-auth-session": "^3.1.0",
     "expo-google-app-auth": "^8.1.4",
+    "expo-random": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "react": "16.13.1",
@@ -23,11 +26,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
-    "expo-random": "~10.0.0"
+    "expo-barcode-scanner": "~9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
