--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
-    "expo-auth-session": "^3.1.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-auth-session": "~3.0.0",
+    "expo-barcode-scanner": "~9.1.0",
+    "expo-font": "~8.4.0",
     "expo-google-app-auth": "^8.1.4",
     "expo-random": "~10.0.0",
     "expo-status-bar": "~1.0.3",
@@ -30,8 +33,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12",
-    "expo-barcode-scanner": "~9.1.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
