--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "cors": "^2.8.5",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-auth-session": "~3.0.0",
@@ -23,6 +24,8 @@
     "expo-google-app-auth": "^8.1.4",
     "expo-random": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "express": "^4.17.1",
+    "faunadb": "^4.2.0",
     "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
