--- a/serverless-rest-api/firebase.json
+++ b/serverless-rest-api/firebase.json
@@ -1,9 +1,4 @@
 {
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
-  },
   "hosting": {
     "public": "public",
     "ignore": [
@@ -13,12 +8,8 @@
     ],
     "rewrites": [
       {
-        "source":"/api/v1**/**",
-        "function":"api"
-      },
-      {
-        "source": "**",
-        "destination": "/index.html"
+        "source": "/api/v1/**",
+        "functions": "api"
       }
     ]
   }
