First iteration of serverless API

--- a/serverless-rest-api/firebase.json
+++ b/serverless-rest-api/firebase.json
@@ -8,8 +8,8 @@
     ],
     "rewrites": [
       {
-        "source": "/api/v1/**",
-        "functions": "api"
+        "source": "/api/v1/**/**",
+        "function": "api"
       }
     ]
   }
