--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
@@ -27,6 +28,7 @@
     "express": "^4.17.1",
     "faunadb": "^4.2.0",
     "firebase": "7.9.0",
+    "firebase-functions-helper": "^0.11.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
