--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
-    "expo-auth-session": "~3.0.0",
+    "expo-auth-session": "^3.2.2",
     "expo-barcode-scanner": "~9.1.0",
     "expo-font": "~8.4.0",
     "expo-google-app-auth": "^8.1.4",
@@ -27,13 +27,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.15.6",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
