--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "^0.15.6",
